# sphinx_demo_doc

./: .bumpversion.cfg  .gitignore  LICENSE  README.md  RELEASE_NOTES.md  RELEASE_NOTES.rst  environment.yml  pyproject.toml
docs/: README.txt
docs/source/_static/blobs/: README.txt
docs/source/_static/images/: README.txt
docs/source/content/: RELEASE_NOTES.rst  index.rst
src/: some-fake-src-code.txt
tools/: conda-activate.ps1
