[tool.poetry]
name = "sphinx_demo_doc"
version = "1.0.2"
description = "This Sphinx doc minimally demonstrates the requirements to work a Sphinx build, notably for use with sphinx_repo_manager"
authors = ["Xsolla Backend <xbe@xsolla.com>", "Dylan Hunt <d.hunt@xsolla.com>"]
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Framework :: Sphinx"
]

[tool.poetry.dependencies]
python = ">=3.10"
sphinx = ">=7.3.7"  # Confirmed working in 8.1.3

[tool.poetry.urls]
Homepage = "https://source.goxbe.io/Core/docs/sphinx_demo_doc"
Issues = "https://source.goxbe.io/Core/docs/sphinx_demo_doc/-/issues"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
